index page completed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <header>
-            <h1>Resturant A</h1>
-            <a href="menu.html"><h2>Our Menu</h2></a>
+            <h1>Resturant A - Dining Excelence</h1>
+            <h2><a href="menu.html">Our Menu</a></h2>
         </header>
         <picture id="heroImage">
             <source srcset="images/resturant.jpg?as=avif&width=1280px&height=720px">
@@ -22,10 +22,10 @@
             <div>
                 <h2>Finest Of Food</h2>
                 <p>burgers are a cost-effective food option for both consumers and businesses, though the analysis of cost-effectiveness varies based on ingredients, 
-                preparation methods, market factors, and consumer preferences. The potential for profit is significant in the restaurant industry, particularly when considering the growing demand for diverse and healthier options. 
+                preparation methods, market factors, and consumer preferences.<br><br><span class="extra"> The potential for profit is significant in the restaurant industry, particularly when considering the growing demand for diverse and healthier options. 
                 As consumer trends continue to evolve, the landscape of burger pricing and cost-effectiveness will likely shift, influencing both the supply chain and consumer purchasing behavior.<br><br> 
                 To remain competitive, businesses must continually assess their offerings to balance cost, quality, and consumer demand, 
-                potentially leveraging innovations in menu design and ingredient sourcing as key strategies for maintaining cost-effectiveness.</p>
+                potentially leveraging innovations in menu design and ingredient sourcing as key strategies for maintaining cost-effectiveness.</p></span>
             </div>
             <picture>
                 <source srcset="images/burger.jpg?as=avif&width=400px&height=500px">
@@ -35,12 +35,12 @@
         </section>
         <section>
             <div>
-                <h2>An Enviroment to Dine For</h2>
+                <h2>Environment to Dine For</h2>
                 <p>The restaurant industry has encountered significant challenges in recent years, leading to a decline in many dining establishments. 
-                One major factor contributing to this downturn is the impact of the COVID-19 pandemic, which resulted in both temporary and permanent closures. The pandemic altered consumer behaviors, 
+                One major factor contributing to this downturn is the impact of the COVID-19 pandemic.<br><br><span class="extra"> The pandemic altered consumer behaviors, 
                 pushing many diners toward takeout and delivery options and fostering hesitance to return to indoor dining even as restrictions eased.<br><br>
                 Economic factors have also played a critical role. Rising inflation, supply chain issues, and increased labor costs have resulted in higher operating expenses and decreased consumer spending. 
-                This has strained profitability and complicated the management of staff. </p>
+                This has strained profitability and complicated the management of staff. </p></span>
             </div>
             <picture>
                 <source srcset="images/wine.jpg?as=avif&width=400px&height=500px">
