menu page completed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h2><a href="menu.html">Our Menu</a></h2>
         </header>
         <picture id="heroImage">
-            <source srcset="images/resturant.jpg?as=avif&width=1280px&height=720px">
-            <source srcset="images/resturant.jpg?as=webp&width=1280px&height=720px">
+            <source srcset="images/resturant.jpg?as=avif&width=1280px&height=720px" type="image/avif">
+            <source srcset="images/resturant.jpg?as=webp&width=1280px&height=720px" type="image/webp">
             <img src="images/resturant.jpg?width=1280px&height=720px" alt="Scenic Resturant">
         </picture>
         <section>
@@ -25,11 +25,11 @@
                 preparation methods, market factors, and consumer preferences.<br><br><span class="extra"> The potential for profit is significant in the restaurant industry, particularly when considering the growing demand for diverse and healthier options. 
                 As consumer trends continue to evolve, the landscape of burger pricing and cost-effectiveness will likely shift, influencing both the supply chain and consumer purchasing behavior.<br><br> 
                 To remain competitive, businesses must continually assess their offerings to balance cost, quality, and consumer demand, 
-                potentially leveraging innovations in menu design and ingredient sourcing as key strategies for maintaining cost-effectiveness.</p></span>
+                potentially leveraging innovations in menu design and ingredient sourcing as key strategies for maintaining cost-effectiveness.</span></p>
             </div>
             <picture>
-                <source srcset="images/burger.jpg?as=avif&width=400px&height=500px">
-                <source srcset="images/burger.jpg?as=webp&width=400px&height=500px">
+                <source srcset="images/burger.jpg?as=avif&width=400px&height=500px" type="image/avif">
+                <source srcset="images/burger.jpg?as=webp&width=400px&height=500px" type="image/webp">
                 <img src="images/burger.jpg?width=400px&height=500px" alt="Burger on a table">
             </picture>
         </section>
@@ -40,11 +40,11 @@
                 One major factor contributing to this downturn is the impact of the COVID-19 pandemic.<br><br><span class="extra"> The pandemic altered consumer behaviors, 
                 pushing many diners toward takeout and delivery options and fostering hesitance to return to indoor dining even as restrictions eased.<br><br>
                 Economic factors have also played a critical role. Rising inflation, supply chain issues, and increased labor costs have resulted in higher operating expenses and decreased consumer spending. 
-                This has strained profitability and complicated the management of staff. </p></span>
+                This has strained profitability and complicated the management of staff. </span></p>
             </div>
             <picture>
-                <source srcset="images/wine.jpg?as=avif&width=400px&height=500px">
-                <source srcset="images/wine.jpg?as=webp&width=400px&height=500px">
+                <source srcset="images/wine.jpg?as=avif&width=400px&height=500px" type="image/avif">
+                <source srcset="images/wine.jpg?as=webp&width=400px&height=500px" type="image/webp">
                 <img src="images/wine.jpg?width=400px&height=500px" alt="Glass of wine with a charcuterie board">
             </picture>
         </section>
